# beaver

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  Cargo.toml  ConfigurationCache.d  Dockerfile  FileCache.d  Gemfile  Jenkinsfile  LICENSE  Package.resolved  Package.swift  README.md  beaver-build.gemspec  beaver.gemspec  build-utils.rb  build.ps1  build.rb  build.sh  configure.rb  example.rb  examples.rb  template_gemspec
.github/retired_workflows/: test-linux.yml  test-windows.yml
.github/workflows/: gem-push.yml  macos.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
.zed/: tasks.json
Examples/Arguments/: beaver.rb
Examples/CMake/: .gitignore  README.md  beaver.rb
Examples/CProject/: .gitignore  beaver.rb  main.c
Examples/Dependencies/: .gitignore  beaver.rb  main.cpp
Examples/MultiProject/: .gitignore  beaver.rb
Sources/Beaver/: Argument.swift  ArrayExtension.swift  Beaver+access.swift  Beaver+get.swift  Beaver+target.swift  Beaver.swift  BeaverConfig.swift  Commands.swift  Debug.swift  Files.swift  GlobalThreadCounter.swift  Language.swift  MesageHandler.swift  NonCopyableArray.swift  OnceLock.swift  OptimizationMode.swift  PersistedStorage.swift  Project.swift  RWLock.swift  Sequence+Async.swift  Tools.swift  URL+ninja.swift  URLExtension.swift
Sources/BeaverRuby/: AsyncTaskQueue.swift  MutableDiscontiguousSlice.swift  RbError.swift  RubyQueue.swift  SyncTaskQueue.swift  executeRuby.swift  init.swift  rubyVersion.swift  run.swift  setup_clean.swift
Sources/CPlatform/: hello.c
Sources/CacheMacros/: CacheEntryMacro.swift  PrimaryKeyMacro.swift  exports.swift
Sources/Platform/: Platform.swift
Sources/ProgressIndicators/: Cargo.toml
Sources/Test/: Test.swift
Sources/UtilMacros/: EnumWrapperMacro.swift  PointerWrapperMacro.swift  conform.swift  error.swift  exports.swift  source.swift
Sources/Utils/: CallStackFormatter.swift  MesageHandler.swift  Process.swift  Result.swift  String.swift  Tools.swift  io.swift
Sources/csqlite3_glue/: glue.m
beaver/: Cargo.toml
beaver-cli/: Cargo.toml  build.rs
beaver-cli/src/: main.rs
beaver-cli/tests/: integration_test.rs
beaver-cli/tests/examples/: arguments.rs  c_project.rs  cargo.rs  cmake.rs  dependencies.rs  mod.rs  multi_project.rs  objc.rs  pre_phase_hooks.rs  spm.rs  swift.rs
beaver-macros/: Cargo.toml
beaver-macros/src/: init_descriptor.rs  lib.rs
beaver-ruby/: Cargo.toml  build.rs
beaver-ruby/src/: error.rs  execute.rs  ext.rs  lib.rs  rutie_ext.rs
beaver-ruby/src/ruby_lib/: arguments.rs  build_dir.rs  cache.rs  command.rs  dependency.rs  global.rs  mod.rs  pre.rs  project.rs  project_accessor.rs  target.rs  target_accessor.rs  target_triple.rs
beaver/src/: beaver.rs  command.rs  error.rs  lib.rs  main.rs  optimization_mode.rs  path.rs  phase_hook.rs  tools.rs  triple.rs
beaver/src/backend/: builder.rs  mod.rs
beaver/src/backend/ninja/: builder.rs  mod.rs  runner.rs
beaver/src/backend/rules/: mod.rs
beaver/src/cache/: beaver_cache_funcs.rs  beaver_files.rs  cache.rs  data.rs  mod.rs
beaver/src/cache/models/: concrete_file.rs  file.rs  mod.rs
beaver/src/cache/types/: error.rs  mod.rs  time.rs  uint.rs
beaver/src/platform/: flags.rs  mod.rs  os_extensions.rs
beaver/src/project/: mod.rs
beaver/src/project/projects/: beaver.rs  mod.rs
beaver/src/project/projects/beaver/: mod.rs  project.rs
beaver/src/project/projects/c/: project.rs
beaver/src/project/projects/cargo/: importer.rs  mod.rs  project.rs
beaver/src/project/projects/cmake/: importer.rs  project.rs
beaver/src/project/projects/meson/: importer.rs  mod.rs  project.rs
beaver/src/project/projects/spm/: importer.rs  project.rs
beaver/src/project/traits/: mod.rs  project.rs
beaver/tests/: integration_tests.rs
docs/: book.toml
docs/internal/: Cache.md  How-Its-Built.md
docs/src/: 0-getting-started.md  1-1-using-commands-to-build-a-c-project.md  1-2-using-project-to-build-a-c-project.md  1-building-a-c-project.md  1-using-commands-to-build-a-c-project.md  1_introduction.md  1t-1-2-using-project-to-build-a-c-project.md  1t-1-building-a-c-project.md  1t-2-importing-another-project.md  2-1-cmd.md  2-2-1-each.md  2-2-2-all.md  2-2-command-dependencies.md  2-3-sh.md  2-commands.md  2_1_project.md  2_2_target.md  2_3_dependency.md  2_4_build_directory.md  2_5_importing.md  2_6_cli.md  2_7_pre.md  2_8_running_executable.md  3-project.md  3_1_project.md  3_2_C_target.md  3_3_shell.md  4-env.md  SUMMARY.md
examples/arguments/: beaver.rb
examples/c-project/: .ninja_deps  .ninja_log  beaver.rb
examples/cache-commands/: beaver.rb  input.txt
examples/cargo/: README.md  beaver.rb  main.c
examples/cmake/: .gitignore  MyFileFormat.fbs  beaver.rb
examples/custom-target/: README.md  beaver.rb  lib.c  main.c
examples/dependencies/: beaver.rb
examples/meson/: build.rb  main.c
examples/meson/meson-project/: meson.build  source.c  source.h
examples/multi-project/: beaver.rb
examples/objc/: beaver.rb  class_def.h  greeter.h  main.m
examples/pre-phase-hooks/: beaver.rb  main.c
examples/spm/: README.md  beaver.rb  main.m
glob/: Cargo.toml
glob/src/: error.rs  glob.rs  glob_set.rs  lib.rs
images/: README.md  alpine.dockerfile  make.rb
lib/: FileInfo.rb  alias.rb  beaver.rb  command.rb  context.rb  envvar.rb  file.rb  file_change.rb  file_dep.rb  file_exists.rb  file_matches.rb  file_obj.rb  project.rb  sh.rb  target.rb  tools.rb  util.rb
lib/c/: configuration.rb  dependency.rb  pkg_config.rb  target.rb  tools.rb
lib/common-language/: library.rb
lib/files/: cache.rb  file_obj.rb  file_utils.rb
lib/formatting/: log.rb
lib/swift/: spm_project.rb
pkgconfig-parser/: Cargo.toml
pkgconfig-parser/src/: lib.rs
program-communicator/: Cargo.toml
program-communicator/src/: lib.rs
program-communicator/src/callback/: mod.rs  unix.rs
program-communicator/src/socket/: mod.rs  unix.rs  wrapper.rs
spm-manifest/: Cargo.toml  README.md
spm-manifest/src/: definition.rs  lib.rs
tests/: common.rb  test.rb
tests/basic-c-commands/: hello  (+2 more)
utils/: Cargo.toml
(+199 files in other folders)
