[workspace]
resolver = "2"
members = [
  "beaver-cli",
  "beaver",
  "glob",
  "utils",
  "beaver-macros",
  "beaver-ruby",
]

[workspace.package]
edition = "2021"
authors = ["Jonas Everaert"]

[workspace.dependencies]
colog = "1.3"
console = "0.15"
clap = "4.5"
globset = "0.4"
log = "0.4"
semver = "1.0"
target-lexicon = "0.13"
thiserror = "2.0"
url = "2.5"
unicode-segmentation = "1.12"
regex = "1.11"
lazy_static = "1.5"
rayon = "1.10"
rutie = { git = "https://github.com/danielpclark/rutie" }
enum_dispatch = "0.3"
