[workspace]
resolver = "2"
members = [
  "beaver-cli",
  "beaver",
  "utils",
  "beaver-macros",
  "beaver-ruby",
  "spm-manifest",
  "program-communicator",
  "pkgconfig-parser"
]
exclude = [
  "examples/cargo/hello-world"
]

[workspace.package]
edition = "2024"
authors = ["Jonas Everaert"]

[workspace.dependencies]
colog = "1.3"
env_logger = "0.11"
colored = "3.0"
console = "0.15" # TODO: replace with colored
clap = "4.5"
shlex = "1.3"
globset = "0.4"
log = "0.4"
semver = "1.0"
target-lexicon = "0.13"
thiserror = "2.0"
url = "2.5"
urlencoding = "1.0" # TODO: 2.0 upgrade
unicode-segmentation = "1.12"
regex = "1.11"
lazy_static = "1.5"
rayon = "1.10"
magnus = "0.7"
rb-sys = { version = "^0.9.85", default-features = false } # keep on par with magnus
enum_dispatch = "0.3"
const-gen = "1.6"
pathdiff = "0.2"
serde = "1.0"
toml = "0.8"
serde_json = "1.0"
# clap_mangen = "0.2"
# ormlite = "0.23"
# sqlx = "0.8"
sled = "0.34"
# bytemuck = "1.22"
zerocopy = "0.8"
async-executor = "1.13"
futures-lite = "2.6"
uuid = "1.15"
tempdir = "0.3"
tokio = "1.43"
itertools = "0.14"
seq-macro = "0.3"
libc = "0.2"
peek-again = { version = "0.4", features = ["allow-unsafe"] }
globwalk = "0.9"
atomic_refcell = "0.1"
pkg-config = "0.3"
owning_ref = "0.4"
ouroboros = "0.18"
scoped-env = "2.1"

cmake-file-api = "0.1"
cargo-manifest = "0.19"

# [profile.release]
# strip = true
# lto = true
# codegen-units = 1
# # TODO: look into UPX

[profile.dev.package.sqlx-macros]
opt-level = 3
