[package]
name = "beaver-cli"
version = "4.0.0"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "beaver"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["cargo"] }
console = { workspace =  true }
lazy_static = { workspace = true }
log = { workspace = true }
colog = { workspace = true }
beaver = { path = "../beaver" }
beaver-ruby = { path = "../beaver-ruby" }

[build-dependencies]
const-gen = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
regex = { workspace = true }
