[package]
name = "beaver-ruby"
edition.workspace = true
authors.workspace = true

[dependencies]
magnus = { workspace = true, features = ["embed", "rb-sys"] }
rb-sys = { workspace = true }

thiserror = { workspace = true }
log = { workspace = true }
url = { workspace = true }
target-lexicon = { workspace = true }
shlex = { workspace = true }

beaver = { path = "../beaver" }
utils = { path = "../utils" }

# [build-dependencies]
# pkg-config = "0.3"
