[package]
name = "beaver-ruby"
edition.workspace = true
authors.workspace = true

[dependencies]
magnus = { workspace = true, features = ["embed", "rb-sys"] }
rb-sys = { workspace = true, default-features = false, features = [] } # TODO: option for dynamic

thiserror = { workspace = true }
log = { workspace = true }
url = { workspace = true }
target-lexicon = { workspace = true }
shlex = { workspace = true }
console = { workspace = true }

beaver = { path = "../beaver" }
utils = { path = "../utils", features = ["junctions"] }

# [build-dependencies]
# pkg-config = "0.3"
