[package]
name = "beaver"
version = "5.0.0"
edition.workspace = true
authors.workspace = true

[dependencies]
colog = { workspace = true }
console = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
target-lexicon = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
enum_dispatch = { workspace = true }
utils = { path = "../utils" }
glob = { path = "../glob" }
beaver-macros = { path = "../beaver-macros" }
