[package]
name = "program-communicator"
edition.workspace = true
authors.workspace = true

[dependencies]
tempdir = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils", features = ["junctions"] }

[dev-dependencies]
colog = { workspace = true }
